<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Hidden unless a receiver is reachable: CastMenu.setUp() shows it only when Play services
         is present and the Cast SDK resolves, so a de-Googled device never sees a dead button. -->
    <item
        android:id="@+id/media_route_menu_item"
        android:icon="@drawable/ic_cast_white"
        android:title="@string/cast"
        android:visible="false"
        app:actionProviderClass="androidx.mediarouter.app.MediaRouteActionProvider"
        app:showAsAction="always" />

    <item
        android:id="@+id/toggle_watched"
        android:icon="@drawable/ic_visibility"
        android:title="@string/toggle_watched"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/force_sync"
        android:icon="@drawable/ic_sync_rotate"
        android:title="@string/force_sync"
        app:showAsAction="ifRoom" />

</menu>